--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -23,6 +23,7 @@
       local_config:
           JARVIS_DIR: '/root/.jarvis'
           JARVIS_CONFIGS_DIR: '/root/.jarvis/configs'
+          JARVIS_ADMIN_USERNAME: 'root'
           JARVIS_NETWORK_PREFIX: '192.168.68'
           JARVIS_GATEWAY: '{{ local_config.JARVIS_NETWORK_PREFIX }}.1'
           JARVIS_DNS_SERVERS: ['8.8.8.8', '8.8.4.4']
