--- a/ProxmoxAnsible/tasks/instances/248_jellyfin_lxc.yml
+++ b/ProxmoxAnsible/tasks/instances/248_jellyfin_lxc.yml
@@ -1,54 +1,49 @@
 - vars:
-      id: 253
+      id: 248
       instance:
-          hostname: apps
-          memory: 8192
+          hostname: jellyfin
+          memory: 6144
           swap: 512
           cores: 4
           storage: local-lvm
           ip: '{{ env.JARVIS_NETWORK_PREFIX }}.{{ id }}'
           gateway: '{{ env.JARVIS_GATEWAY }}'
-          configs: '/root/configs'
-          subuid: '100000'
-      docker_host: 'tcp://{{ instance.ip }}:2375'
+      paths:
+          config: '{{ env.JARVIS_CONFIGS_DIR }}/{{ instance.hostname }}/etc'
+          data: '{{ env.JARVIS_CONFIGS_DIR }}/{{ instance.hostname }}/lib'
   block:
-      - name: '{{ instance.hostname | upper }}: Install Host Dependencies'
-        apt:
-            name:
-                - python3-docker
-            state: present
-
       - name: '{{ instance.hostname | upper }}: Check if Instance exists'
         uri:
-            url: 'http://{{ instance.ip }}:2375/version'
+            url: 'http://{{ instance.ip }}:8096'
             timeout: 5
         register: instance_check
         failed_when: false
         changed_when: false
 
-      - name: '{{ instance.hostname | upper }}: Set Instance Exists Fact'
-        set_fact:
+      - set_fact:
             instance_exists: '{{ instance_check.status | default(0) == 200 }}'
 
-      - name: '{{ instance.hostname | upper }}: Create Host Config Base Directory'
+      - name: '{{ instance.hostname | upper }}: Create Config Directory on Host'
         file:
-            path: '{{ env.JARVIS_CONFIGS_DIR }}'
+            path: '{{ item }}'
             state: directory
-            mode: '0755'
-            owner: '{{ instance.subuid }}'
-            group: '{{ instance.subuid }}'
+            mode: '0777'
+            recurse: true
+        loop:
+            - '{{ paths.config }}'
+            - '{{ paths.data }}'
 
       - name: '{{ instance.hostname | upper }}: Provision Instance'
         block:
             - name: '{{ instance.hostname | upper }}: Stop and Destroy LXC'
-              shell: pct stop {{ id }}; pct unlock {{ id }}; pct destroy {{ id }}
+              shell: pct stop {{ id }}; pct destroy {{ id }}
               failed_when: false
               changed_when: false
 
             - name: '{{ instance.hostname | upper }}: Create Temporary Install Directory'
               tempfile:
                   state: directory
-                  suffix: _docker_install
+                  suffix: _jellyfin_install
               register: temp_install_dir
 
             - name: '{{ instance.hostname | upper }}: Create default.vars for Silent Install'
@@ -58,29 +53,28 @@
                       var_container_storage={{ instance.storage }}
                       var_template_storage={{ instance.storage }}
 
-            - name: '{{ instance.hostname | upper }}: Install Docker using community script'
+            - name: '{{ instance.hostname | upper }}: Install Jellyfin using community script'
               shell: |
                   export mode="default"
                   export var_ctid="{{ id }}"
                   export var_hostname="{{ instance.hostname }}"
                   export var_cpu="{{ instance.cores }}"
                   export var_ram="{{ instance.memory }}"
-                  export var_disk="32"
-                  export var_os="ubuntu"
-                  export var_version="24.04"
+                  export var_disk="16"
                   export var_net="{{ instance.ip }}/24"
                   export var_gateway="{{ instance.gateway }}"
+                  export var_gpu="yes"
                   export var_unprivileged="1"
                   export TERM=xterm
-                  bash -c "$(curl -fsSL {{ env.JARVIS_COMMUNITY_SCRIPTS_URL }}/ct/docker.sh)"
+                  bash -c "$(curl -fsSL {{ env.JARVIS_COMMUNITY_SCRIPTS_URL }}/ct/jellyfin.sh)"
               args:
                   chdir: '{{ temp_install_dir.path }}'
                   executable: /bin/bash
-              register: docker_install
+              register: jellyfin_install
 
-            - name: '{{ instance.hostname | upper }}: Show Docker Install Output'
+            - name: '{{ instance.hostname | upper }}: Show Jellyfin Install Output'
               debug:
-                  var: docker_install.stdout_lines
+                  var: jellyfin_install.stdout_lines
 
             - name: '{{ instance.hostname | upper }}: Cleanup Temporary Directory'
               file:
@@ -94,41 +88,23 @@
             - name: '{{ instance.hostname | upper }}: Set Swap Size'
               command: pct set {{ id }} -swap {{ instance.swap }}
 
-            - name: '{{ instance.hostname | upper }}: Configure LXC Mounts'
+            - name: '{{ instance.hostname | upper }}: Configure LXC Mounts and Passthrough'
               blockinfile:
                   path: '/etc/pve/lxc/{{ id }}.conf'
                   marker: '# {mark} ANSIBLE MANAGED BLOCK'
                   block: |
                       mp0: /mnt/wdhdd,mp=/media/wdhdd
                       mp1: /mnt/ssd,mp=/media/ssd
-                      mp2: {{ env.JARVIS_CONFIGS_DIR }},mp={{ instance.configs }}
+                      mp2: {{ paths.config }},mp=/etc/jellyfin
+                      mp3: {{ paths.data }},mp=/var/lib/jellyfin
+                      lxc.mount.entry: var/cache/transcodes var/lib/jellyfin/transcodes none bind,create=dir,optional 0 0
+
+            - name: '{{ instance.hostname | upper }}: Start LXC'
+              command: pct start {{ id }}
 
         when: not instance_exists
 
-      - name: '{{ instance.hostname | upper }}: Start LXC'
-        command: pct start {{ id }}
-        register: start_lxc
-        failed_when: false
-        changed_when: start_lxc.rc == 0
-
-      - name: '{{ instance.hostname | upper }}: Wait for Docker Remote API'
-        command: pct exec {{ id }} -- curl -s http://127.0.0.1:2375/version
-        register: docker_ready
-        until: docker_ready.rc == 0
-        retries: 30
-        delay: 2
-        changed_when: false
-
-      - name: '{{ instance.hostname | upper }}: Clean All Docker Containers'
-        command: pct exec {{ id }} -- bash -c "docker ps -aq | xargs -r docker rm -f"
-        register: docker_clean
-        changed_when: docker_clean.stdout != ""
-
-      # - name: '{{ instance.hostname | upper }}: Deploy Apps'
-      #   include_tasks: '{{ app_task }}'
-      #   vars:
-      #       ansible_user: '{{ env.JARVIS_ADMIN_USERNAME }}'
-      #   loop: '{{ lookup("fileglob", "tasks/instances/apps_lxc/*.yml", wantlist=True) | reject("search", "index.yml") | sort }}'
-      #   loop_control:
-      #       loop_var: app_task
+  rescue:
+      - debug:
+            msg: '{{ instance.hostname }} ({{ id }}) failed to deploy'
   become: true
