--- a/ProxmoxAnsible/tasks/instances/249_qbittorrent_lxc.yml
+++ b/ProxmoxAnsible/tasks/instances/249_qbittorrent_lxc.yml
@@ -195,4 +195,7 @@
 
         when: not instance_exists
 
+  rescue:
+      - debug:
+            msg: '{{ instance.hostname }} ({{ id }}) failed to deploy'
   become: true
